https://www.youtube.com/watch?v=2uDbe_9HetY&list=PLKnjBHu2xXNMK5MBogdXmsXVi3K_eEZT5&index=21 videoda kalındı.

--- a/TraversalCoreProject/Views/LayoutPartial/_NavBarPartial.cshtml
+++ b/TraversalCoreProject/Views/LayoutPartial/_NavBarPartial.cshtml
@@ -2,13 +2,13 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
             <h1>
-                <a class="navbar-brand mr-lg-5" href="index.html">
+                <a class="navbar-brand mr-lg-5" href="~/Homepage/Index">
                     Traversal
                 </a>
             </h1>
             <!-- if logo is image enable this
             <a class="navbar-brand" href="#index.html">
-                <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
+                <img src="~/traversal-starter/assets/images/c1.jpg" alt="Your logo" title="Your logo" style="height:35px;" />
             </a> -->
             <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
                     data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -20,13 +20,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Ana Sayfa <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="~/Homepage/Index">Ana Sayfa <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Rotalar</a>
+                        <a class="nav-link" href="~/Destination/Index">Rotalar</a>
                     </li>
 
                     <li class="nav-item">
