https://www.youtube.com/watch?v=fLkv7MIA7_w&list=PLKnjBHu2xXNMK5MBogdXmsXVi3K_eEZT5&index=22

--- a/TraversalCoreProject/Views/LayoutPartial/_HeaderPartial.cshtml
+++ b/TraversalCoreProject/Views/LayoutPartial/_HeaderPartial.cshtml
@@ -9,6 +9,7 @@
           rel="stylesheet">
     <!-- google fonts -->
     <!-- Template CSS -->
-    <link rel="stylesheet" href="~/Traversal-Starter/assets/css/style-starter.css">
+    <link href="~/traversal-liberty/assets/css/style-liberty.css" rel="stylesheet" />
     <!-- Template CSS -->
+
 </head>
