--- a/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
@@ -150,13 +150,13 @@
                         </div>
                     </div>
                     <!--//author-card-->
-                    @await Component.InvokeAsync("_CommentList")
+                    @await Component.InvokeAsync("_CommentList", new {id = ViewBag.Id})
                     @await Component.InvokeAsync("_AddComment")
 
                 </div>
             </div>
             <!--//blog-post-->
-            </div>
+        </div>
     </section>
 
     <!-- Template JavaScript -->
