--- a/TraversalCoreProject/Views/Comment/AddComment.cshtml
+++ b/TraversalCoreProject/Views/Comment/AddComment.cshtml
@@ -3,14 +3,14 @@
 @*@using EntityLayer.Concrete
 @model List<Comment>
 *@
+@model EntityLayer.Concrete.Destination
 
 <div class="leave-comment-form mt-5" id="reply">
     <h4 class="side-title mb-2">Bir Yorum Bırakın</h4>
     <p class="mb-4">
         * işaretli alanları doldurmanız gerekmektedir.
     </p>
-    <form action="#" method="post">
-
+    <form method="post" asp-action="AddComment" asp-controller="Comment"> 
         <div class="form-group">
             <textarea name="CommentContent" class="form-control" placeholder="Yorumunuz*" required=""
                       spellcheck="false"></textarea>
@@ -22,12 +22,12 @@
                        required="">
             </div>
             <div class="form-group col-lg-6">
-                <input type="text" name="DestinationID" class="form-control" placeholder="Tur ID*" required="">
+                <input type="hidden" value="@Model.DestinationID" name="DestinationID" class="form-control" placeholder="Tur ID*" required="">
             </div>
         </div>
 
         <div class="submit text-right">
-            <button class="btn btn-style btn-primary">Yorum Yap</button>
+            <button class="btn btn-style btn-primary" type="submit" id="btnsave">Yorum Yap</button>
         </div>
     </form>
 </div>
